style: change spacing issue on dashboard page

--- a/src/app/pages/dashboard/pages/dashboard/components/dashboard-menu/dashboard-menu.component.scss
+++ b/src/app/pages/dashboard/pages/dashboard/components/dashboard-menu/dashboard-menu.component.scss
@@ -38,7 +38,7 @@
   .dashboard-menu {
     height: 100%;
     overflow: auto;
-    padding: 5px 10px;
+    padding: 0 10px;
     .dashboard-menu-list {
       list-style-type: none;
       padding: 0;
@@ -49,7 +49,7 @@
       flex-wrap: nowrap;
       width: 100%;
       li {
-        margin: 3px;
+        margin: 3px 1px;
       }
     }
   }
