--- a/src/app/pages/dashboard/pages/dashboard/containers/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/pages/dashboard/containers/dashboard/dashboard.component.scss
@@ -6,7 +6,6 @@
     right: 0;
     width: 100%;
     z-index: 1350;
-    min-height: 50px;
     background-color: #ffffff;
   }
 }
